--- a/login/indexStyle.css
+++ b/login/indexStyle.css
@@ -117,16 +117,21 @@ body {
     display: block;
     width: 350px;
     text-align: center;
-    margin: 20px 50px 0px 50px;   
+    margin: 10px 50px 0px 50px;   
 }
 
 #facebook{
     margin: 0px 35px 0px 35px;
 }
 
-.linkedin, .facebook, .instagram {
-    height: 30px;
-    width: 30px;    
+.facebook, .instagram {
+    width: 35px;    
+}
+
+.linkedin{
+    width: 55px;
+    position: relative;
+    top: 10px;
 }
 
 #copyright{
