--- a/login/indexStyle.css
+++ b/login/indexStyle.css
@@ -1,14 +1,19 @@
+*{
+    box-sizing: border-box;
+}
+
 body {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     margin: 0px;
-    background-color: whitesmoke;
     font-family: Georgia, 'Times New Roman', Times, serif;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    background-color: whitesmoke;
 }
 
-#pageHeader {
+nav {
     display: flex;
     background-color: grey;
     padding-top: 15px;
@@ -22,47 +27,74 @@ body {
     padding-left: 30px;
 }
 
-.siteNameText{
+nav h2{
     font-style: italic;
     text-decoration: underline;
 }
 
-#login{
-   display: flex;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   width: 900px;
-   height: 450px;
-   border: 2px solid black;
-   border-radius: 5px;
+.container1{
+    display: flex;
+    min-height:calc(100vh - 140px) ;
+    justify-content: center;
+    align-items: center;
 }
 
-#loginImage{
-    height: inherit;
+.container1 .imageHolder img {
+    max-width: 450px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.container2{
+    display: flex;
+    min-width: 900px;
+    border: 2px solid grey;
+    box-shadow: 3px 3px 2px 3px rgb(171, 171, 171);
+    border-radius: 10px;
+}
+
+.imageHolder, #loginDetails{
+    max-height: 450px;
+}
+
+#loginDetails{
     width: 450px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px ;
+    padding: 50px;
 }
 
-#loginForm{
-    margin: 55px 50px 20px 50px;
-}
-
-#userName, #password {
+form {
     width: 350px;
-    background-color: whitesmoke;
-    border: none;
-    border-bottom: 1px solid black;
-    margin-top: 6px;
-    padding: 3px;
+    display: flex;
+    flex-direction: column;
 }
 
-#eye{
-    margin-left: -30px; 
-    cursor: pointer;
-    color: lightgray;
+.username, .password {
+    font-size: medium;
+    font-weight: 400;
+}
+
+#username, #password{
+    all: unset;
+    border-bottom: 2px solid grey;
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+#username {
+    margin-bottom: 20px;
+}
+
+form i {
+    color: rgb(171, 171, 171);
+    text-align: end;
+    position: relative;
+    top: -29px;
+    height: 2px;
+}
+
+.info{
+    display: none;
+    color: red;
 }
 
 #loginButton{
@@ -74,8 +106,8 @@ body {
     background-color: rgb(130, 130, 130);
     font-size: medium;
     font-weight: bold;
-    margin: 20px 0px;
     cursor: pointer;
+    margin: 10px 0px;
 }
 
 #loginButton:hover{
@@ -85,58 +117,46 @@ body {
 
 .signUps{
     display: flex;
-    margin-bottom: 40px;
-    width: inherit;
     justify-content: space-between;
 }
 
-.signUps a{
+.signUps a {
     text-decoration: none;
     color: black;
 }
 
-#info{
-    color: red;
-    display: none;
+.signUps a:hover{
+    text-decoration: underline;
 }
 
-#forgotPassword:hover , #signUp:hover{
-    text-decoration: underline 1px;
-}
-
-.followUsText{
+.followUsText {
     width: 350px;
     display: flex;
     justify-content: center;
     font-weight: bold;
     color: rgb(97, 96, 96);
-    margin: 65px 50px 0px 50px;;
+    margin-top: 40px;
 }
 
-.socialMediaHandles{
-    display: block;
-    width: 350px;
-    text-align: center;
-    margin: 10px 50px 0px 50px;   
+.socialMediaHandles {
+    margin-top: 30px;
+    display: flex;
+    width: 250px;
+    margin-left: 40px;
+    justify-content: space-around;
 }
-
-#facebook{
-    margin: 0px 35px 0px 35px;
-}
-
 .facebook, .instagram {
-    width: 35px;    
+    width: 33px;
+    position: relative;
+    bottom: -10px;
 }
 
 .linkedin{
     width: 55px;
-    position: relative;
-    top: 10px;
 }
 
 #copyright{
-    position: absolute;
-    top: 93%;
-    left: 89%;
-    transform: translate(-7%, -11%);
+    padding-right: 30px;
+    display: flex;
+    justify-content: end;
 }
